added earn credits copy to game thumbnails

--- a/app/views/games/index_mobile.html.erb
+++ b/app/views/games/index_mobile.html.erb
@@ -2,7 +2,9 @@
       <% @games.each do | g | %>
       <% next if g.device_type != 1 %>
        <%= link_to game_path(g) do %>
+        <div class="game-wrapper">
         <%= image_tag(g.image, :class=>'game-image') %>
+        </div>
        <% end %>
       <% end %>
   </div>
