--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -820,6 +820,21 @@ p {
     max-width:500px;
     margin-top:20px;
   }
+  .game-wrapper {
+    position: relative;
+
+    &::after {
+      content: 'Earn Credits';
+        background: rgba(43, 42, 42, 0.85);
+        padding: 10px 20px;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        color: $red !important;
+        border-bottom-right-radius: 8px;
+        border-top-left-radius: 8px;
+    }
+  }
 }
 .game-container{
   min-height:800px;
