--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -821,7 +821,8 @@ p {
   }
   .game-wrapper {
     position: relative;
-    margin-top:20px;
+    max-width:500px;
+    margin: 20px auto 0;
 
     &::after {
       content: 'Earn Credits';
