--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,6 @@
 <% @body_class = "desktop-home" %>
-<%= link_to "Sign In", signin_path, class:"desktop-signin" %>
+
+<a href="/signin" class="desktop-signin">Sign In</a>
 <div class="sign-up">
     <img src="/assets/homescreen-logo.png" class="top-title">
 
