--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,21 +1,8 @@
 /* mixins, variables, etc. */
 @import "bootstrap";
 @import "mixins";
+@import "variables";
 
-$grayMediumLight: #eaeaea;
-$dark-font: #4A4A4A;
-$dark-blue: #10172B;
-$dark-teal: #4fd1b5;
-$purple: #6f5499;
-$black: #000;
-$credits-red: #D9232B;
-$white: #fff;
-$red: #e74c3c;
-$orange: #F2BB7C;
-$silver: #bdc3c7;
-$clouds: #ecf0f1;
-$teal: #56E7C8;
-$grayMediumLight: #eaeaea;
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
@@ -76,8 +63,30 @@ p {
   line-height: 1.7em;
 }
 
+.navigation {
+  display: inline-block;
+  width: 100%;
+  height: 60px;
+  background-color: $orange;
+  .nav-left {
+    float: left;
+    margin-left: 2.5%;
+    @include vertical-align();
+  }
+  .nav-right {
+    float: right;
+    margin-right: 5%;
+    @include vertical-align();
+  }
+  .desktop-home & {
+    display: none;
+  }
+  .nav-logo {
+    height: 25px;
+    width: auto;
+  }
+}
 /*deposit*/
-
 .prize {
   font-size: 36px;
   margin-bottom: 30px;
@@ -1028,7 +1037,7 @@ h1.arrow2 { font-size: 55px;
   position: relative;
   max-width: 350px;
   .desktop-home & {
-    margin: 2.5% 7.5% 13%;
+    margin: 2.5% 7.5% 10%;
   }
 }
 .desktop-signin {
@@ -1094,6 +1103,25 @@ h1.arrow2 { font-size: 55px;
 
   .desktop-home & {
     font-size: 22px;
+  }
+}
+.sign-in--desktop {
+  width: 40%;
+  margin: 0 auto;
+
+  input {
+    text-align: center;
+    height: 40px !important;
+    padding: 0;
+    border-radius: 100px;
+    border: 2px solid $purple-border;
+    background-color: $purple-light;
+    width: 100%;
+    color: #fff;
+  }
+
+  input[type="submit"] {
+    margin-top: 20px;
   }
 }
 .form-separator{
@@ -1171,6 +1199,35 @@ h1.arrow2 { font-size: 55px;
     margin-top:20px;
   }
 }
+.game-wrapper {
+  position: relative;
+  display: inline-block;
+  width: 48%;
+  margin: 0 5px;
+
+
+  &:nth-child(odd) {
+    float: left;
+  }
+  &:nth-child(even) {
+    float: right;
+  }
+  &:last-child {
+    float: right;
+  }
+  &::after {
+    content: 'Earn Credits';
+      background: rgba(43, 42, 42, 0.85);
+      padding: 10px 20px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      color: $red !important;
+      border-bottom-left-radius: 8px;
+      border-top-right-radius: 8px;
+      font-size: 12px;
+  }
+}
 .game-container{
   min-height:800px;
   background:#000;
@@ -1198,7 +1255,7 @@ h1.arrow2 { font-size: 55px;
   .mountain-image{
     position:relative;
     top:-177px;
-    max-height:300px;
+    max-height:350px;
     z-index:1;
     .mountains{
       width:100%;
