--- a/app/views/static_pages/redeem.html.erb
+++ b/app/views/static_pages/redeem.html.erb
@@ -11,7 +11,7 @@
 
 	</div>
 </div>
-<div class='cash-out'>
+<div class='inner-page__list'>
 	<p class="page-title">Rewards</p>
 	<ul>
 		<%= link_to redeem_credits_path(credits: 1000) do %>
