--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -1,4 +1,4 @@
-<div class='cash-out'>
+<div class='inner-page__list'>
   <p class="page-title">Surveys</p>
   <ul>
     <% @surveys.each do |survey| %>
