--- a/app/views/static_pages/redeem_credits.html.erb
+++ b/app/views/static_pages/redeem_credits.html.erb
@@ -15,7 +15,7 @@
   	<%= f.hidden_field :user_id, :value => current_user.id %>
     <%= f.hidden_field :credits, :value => @amount %>
     <%= f.hidden_field :cashout_type %>
-    <div class="cash-out">
+    <div class="inner-page__list">
       <p class="page-title">Cash</p>
       <ul class="cash-out__list">
         <li class="paypal-choice">
