adjusted styles for leaderboards

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -613,7 +613,7 @@ p {
     text-decoration: none !important;
   }
   .back-button{
-    font-size: 2.25em;
+    font-size: 28px;
     z-index:1;
     display:inline;
     color: #fff;
