--- a/app/assets/stylesheets/leaderboard.css.scss
+++ b/app/assets/stylesheets/leaderboard.css.scss
@@ -2,8 +2,21 @@
 @import "mixins";
 @import "variables";
 
-div[id^=leaderboard] {
-  padding: 20px 0;
+$flappy-bg: #D1E9F6;
+$flappy-font: #0051BB;
+
+$traffic-bg: #8DA339;
+$traffic-font: #fff;
+
+$falldown-bg: #a2a2a2;
+$falldown-font: #FEE2C7;
+
+.leaderboard-nav {
+  padding: 10px 0;
+  background: $flappy-font;
+  height: 40px;
+  margin-bottom: 20px;
+  position: relative;
 }
 .leaderboader-head__icon {
   border: 1px solid $black;
@@ -17,15 +30,16 @@ div[id^=leaderboard] {
 .leaderboard__title {
   margin: 0;
   font-size: 20px;
-  color: #0051BB;
+  color: $white;
 }
 .leaderboard__subtitle {
   text-align: center;
   font-size: 12px;
+  color: $clouds;
   margin-bottom: 20px;
 }
 #leaderboard--flappy-pilot {
-  background-color: #D1E9F6;
+  background-color: $flappy-bg;
   background-image: none;
 }
 .leaderboard__cat-wrapper {
@@ -36,7 +50,7 @@ div[id^=leaderboard] {
     width: 80%;
     margin: 0 auto;
     text-align: center;
-    border: 2px solid #0051BB;
+    border: 2px solid $flappy-font;
     border-radius: 2px;
 }
 .cat-title {
@@ -44,13 +58,13 @@ div[id^=leaderboard] {
     padding: 5px 5%;
     margin: 0;
     display: inline-block;
-    color: #0051BB;
+    color: $flappy-font;
     width: 40%;
     &:hover {
       cursor: pointer;
     }
     &.active {
-      background: #0051BB;
+      background: $flappy-font;
       color: $white;
     }
 }
@@ -70,10 +84,10 @@ div[id^=leaderboard] {
 
 }
 .leaderboard-row {
-  color: #0051BB;
-  border-bottom: 1px solid $white;
+  color: $flappy-font;
+  border-bottom: 1px solid $clouds;
   margin: 10px 10%;
-  padding: 0 5px 10px;
+  padding: 0 5px   10px;
   span {
     display: inline-block;
     width: 33.33%;
@@ -89,4 +103,19 @@ div[id^=leaderboard] {
 .leaderboard-score {
   float: right;
   text-align: right;
+}
+.leaderboard-back {
+  position: absolute;
+  color: $white;
+  top: 16px;
+  left: 10px;
+  &:hover {
+    text-decoration: none;
+    color: $white;
+  }
+  .fa {
+    font-size: 28px;
+    position:relative;
+    margin-right: 5px;
+  }
 }
