--- a/app/views/games/leaderboard.html.erb
+++ b/app/views/games/leaderboard.html.erb
@@ -1,4 +1,6 @@
+<% @body_class = "leaderboard-page" %>
 <% @mobile_container_id = "leaderboard--#{@game.slug}" %>
+
 <section class="leaderboard-nav">
   <a class="leaderboard-back" href="/games/<%= @game.id %>"><i class="fa fa-chevron-left back-button"></i></a>
   <h1 class="leaderboard__title">Leaderboard</h1>
