changed title color for falldown leaderboard

--- a/app/assets/stylesheets/leaderboard.css.scss
+++ b/app/assets/stylesheets/leaderboard.css.scss
@@ -69,6 +69,7 @@ $falldown-font: #FEE2C7;
     background: $falldown-font;
   }
 
+  .leaderboard__title,
   .leaderboard__subtitle {
     color: $falldown-bg;
   }
