--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -10,6 +10,7 @@ $credits-red: #D9232B;
 $white: #fff;
 $red: #e74c3c;
 $orange: #F2BB7C;
+$dark-orange: #edae65;
 $silver: #bdc3c7;
 $clouds: #ecf0f1;
 $teal: #56E7C8;
