--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,15 @@
       </div>
       <% if current_user %>
         <div class="nav-right">
-          <%= link_to "Sign out", signout_path, method: "delete" %>
+          <div class="nav-dropdown">
+            <p class="nav-dropdown__name"><i class="fa fa-angle-down"></i> <%= current_user.name %></p>
+            <span class="nav-dropdown__avatar"></span>
+            <ul class="nav-dropdown__list">
+              <li class="nav-dropdown__item"><a href="/">Foo</a></li>
+              <li class="nav-dropdown__item"><%= link_to "Sign out", signout_path, method: "delete" %></li>
+            </ul>
+          </div>
+
         </div> <!--/.nav-right -->
       <% end %>
     </section>
@@ -39,6 +47,14 @@
       }(document, 'script'));
     </script>
 
+
+    <script>
+      $(document).ready(function(){
+        $('.nav-dropdown').click(function(){
+          $(this).toggleClass('show');
+        });
+      });
+    </script>
 <% if Rails.env.production? %>
     <!-- google analytics -->
     <script>
