adding desktop styles to refer page

--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -124,7 +124,7 @@
                         <%= link_to surveys_path do %>
                         <li>
                             <%= embedded_svg('svgs/icons/homework.svg', :class => 'survey-icon') %>
-                            Survey
+                            Take Survey
                             <span class='survey-credits'>+100</span>
                         </li>
                         <% end %>
