--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,7 @@
 @import "bootstrap";
 @import "mixins";
 @import "variables";
+@import "interior_pages";
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
@@ -69,7 +70,7 @@ p {
   cursor: pointer;
   &.show {
     .nav-dropdown__name {
-      .fa-angle-down {
+      .fa-caret-down {
         @include rotate(180deg);
       }
     }
@@ -83,10 +84,12 @@ p {
   margin-right: 45px;
   position: relative;
   top: 4px;
-  .fa-angle-down {
+  .fa-caret-down {
     margin-right: 5px;
     font-size: 18px;
     @include transition();
+    position: relative;
+    top: 2px;
   }
 }
 .nav-dropdown__avatar {
@@ -98,6 +101,8 @@ p {
   position: absolute;
   top: 9px;
   right: -10px;
+  background-size: 100%;
+  background-position: center;
 }
 .nav-dropdown__list {
   position: absolute;
@@ -107,25 +112,35 @@ p {
   margin: 0;
   text-align: left;
   padding: 10px;
-  background: $dark-orange;
+  background: $orange;
   display: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .nav-dropdown__item {
-  border-bottom: 1px solid $clouds;
-  padding: 5px 0;
+
   a {
+    display: block;
+    padding: 5px 0;
     text-decoration: none;
     color: $white;
+    @include transition();
     &:hover {
       color: $grayMediumLight;
     }
   }
-  &:last-child {
+  &:first-child {
     border: none;
   }
 }
-
+.nav-dropdown__signout {
+  border-top: 1px solid $clouds;
+  margin: 10px 0 0;
+  a {
+    padding: 10px 10px 0;
+  }
+}
 .navigation {
   display: inline-block;
   width: 100%;
@@ -564,7 +579,6 @@ a:hover {
 /*
  * Base structure
  */
-
 html,
 body {
 /*css for full size background image*/
@@ -580,7 +594,15 @@ body {
   text-align: center;
   background-position: 0 0;
 }
-
+.notification {
+  position: absolute;
+  top: -2px;
+  right: -5px;
+  padding: 2px 6px;
+  background: $red;
+  color: $white;
+  border-radius: 4px;
+}
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
   display: table;
@@ -1275,6 +1297,11 @@ h1.arrow2 { font-size: 55px;
     width:100%;
   }
 }
+.game-leaderboard {
+  position: absolute;
+  right: 5%;
+  top: 5%;
+}
 .game-wrapper {
   position: relative;
   display: inline-block;
@@ -1291,7 +1318,7 @@ h1.arrow2 { font-size: 55px;
     float: right;
   }
   &::after {
-    content: 'Earn Credits';
+    content: 'EARN CREDITS';
       background: rgba(43, 42, 42, 0.85);
       padding: 10px 20px;
       position: absolute;
@@ -1300,7 +1327,7 @@ h1.arrow2 { font-size: 55px;
       color: $red !important;
       border-bottom-left-radius: 8px;
       border-top-right-radius: 8px;
-      font-size: 12px;
+      font-size: 11px;
   }
 }
 .game-container{
@@ -1384,7 +1411,6 @@ h1.arrow2 { font-size: 55px;
     @include floating();
   }
 }
-
 
 /*body {
   background: url(background_decent.svg) no-repeat center center fixed;
