--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,6 +2,9 @@
     <% @games.each do | g | %>
     <% next if g.device_type != 1 %>
     <div class="game-wrapper">
+      <% if g.slug == "flappy-pilot" %>
+        <img class="game-leaderboard" src="/assets/leaderboard.png">
+      <% end %>
       <%= link_to game_path(g) do %>
         <%= image_tag(g.image, :class=>'game-image') %>
       <% end %>
