--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,18 +17,23 @@
       <% if current_user %>
         <div class="nav-right">
           <div class="nav-dropdown">
-            <p class="nav-dropdown__name"><i class="fa fa-angle-down"></i> <%= current_user.name %></p>
-            <span class="nav-dropdown__avatar"></span>
+            <p class="nav-dropdown__name"><i class="fa fa-caret-down"></i> <%= current_user.name %></p>
+            <span class="nav-dropdown__avatar" style="background-image:url(https://scontent-lga3-1.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/12046645_10156278484520601_6181728789750839912_n.jpg?oh=a6e53546013f32a7c9563318ca24d5a3&oe=56F798D3);">
+              <i class="fa fa-exclamation notification"></i>
+            </span>
             <ul class="nav-dropdown__list">
-              <li class="nav-dropdown__item"><a href="/">Foo</a></li>
-              <li class="nav-dropdown__item"><%= link_to "Sign out", signout_path, method: "delete" %></li>
+              <li class="nav-dropdown__item"><%= link_to 'Redeem Credits', redeem_path %></li>
+              <li class="nav-dropdown__item"><%= link_to 'Invite Friends', refer_path %></li>
+              <li class="nav-dropdown__item"><%= link_to 'Take Survey', surveys_path %></li>
+              <li class="nav-dropdown__item"><a href="mailto:support@getluckee.com" target="_top">Contact Us</a></li>
+              <li class="nav-dropdown__item nav-dropdown__signout"><%= link_to "Sign out", signout_path, method: "delete" %></li>
             </ul>
           </div>
 
         </div> <!--/.nav-right -->
       <% end %>
     </section>
-    <div>
+    <div class="app-wrapper">
       <% flash.each do |key, value| %>
         <div class="alert alert-<%= key %>"><%= value %></div>
       <% end %>
