--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -88,7 +88,7 @@
         <script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
         -->
 
-         <% if Rails.env.production? %>
+         <% if false && Rails.env.production? %>
             <!-- Pulse -->
             <script type="text/javascript">
               !function(a,b,c,d,e,f,g,h){a.RaygunObject=e,a[e]=a[e]||function(){
