trying to get pulse tracking to work

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,6 +60,11 @@
       ga('send', 'pageview');
 
     </script>
+      <script type="text/javascript">
+          rg4js('apiKey', 'K9ewfiwAigDX1AXxc+lC0Q==');
+          rg4js('attach', true);
+          rg4js('enablePulse', true);
+        </script> 
 <% end %>
   </body>
 </html>
