--- a/app/views/static_pages/refer.html.erb
+++ b/app/views/static_pages/refer.html.erb
@@ -1,12 +1,20 @@
-<% provide(:title, 'Redeem') %>
-<div class='my-balance'>
-	<p class="intro-copy" >When you invite a friend and they sign up through your personalized link, you earn <span class='credits'> 25 </span> credits!</p>
-	<div class="refer-friend">
-    <p class="redeemCredits__title">Copy &amp; Share:</p>
-    <p class="redeemCredits__link"><%= request.host_with_port %>/invite/<%=@referal_code %></p>
+<% @body_class = 'interior-page' %>
 
-    <div class="refer-friend__copy-button">
-      <button class="zclip" data-zclip-text="<%= request.host_with_port %>/invite/<%=@referal_code %>">Click to Copy</button>
-    </div>
-  </div>
+<% provide(:title, 'Redeem') %>
+<div class="interior-hero">
+<h1 class="interior-hero__title">Invite Friends, Earn Credits</h1>
+<p class="interior-hero__desc" >When you invite a friend and they sign up through your personalized link, you earn <span class='credits'> 25 credits!</span></p>
+</div> <!--/.interior-hero -->
+
+<div class="interior-body">
+  <section class="interior-body--section section--one">
+  <!-- <p class="interior-body__title">Copy &amp; Share:</p> -->
+  <p class="interior-body__caption">My Referal Link</p>
+  <p class="interior-body__link share-link"><%= request.host_with_port %>/invite/<%=@referal_code %></p>
+
+  <button class="zclip refer-friend__btn" data-zclip-text="<%= request.host_with_port %>/invite/<%=@referal_code %>">Click to Copy</button>
+  </section><!--/.section--one -->
+<!--
+  <section class="interior-body--section section--two"> -->
+  </section><!--/.section--two -->
 </div>
