--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,6 +4,7 @@
 @import "variables";
 @import "interior_pages";
 @import "cards";
+// @import "leaderboard";
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
