--- a/app/views/static_pages/redeem_credits.html.erb
+++ b/app/views/static_pages/redeem_credits.html.erb
@@ -1,34 +1,33 @@
 <% provide(:title, 'Redeem') %>
-<div class='mobile-form'>
-  <div class='my-balance'>
-    <div class="redeem">
-      <i class="fa fa-usd redeem__dollars"></i>
-      <div class="redeem__copy">
-        <p class="redeemCredits">My balance: <span class='credits'>
-        <%= current_user.credits.blank? ? "0" : current_user.credits %></span>
-        <p class="redeemCredits__desc">How would you like to cash out?</p>
-      </div>
-    </div>
-  </div>
+
+<% @body_class = 'interior-page' %>
+
+<div class="interior-hero">
+  <h1 class="interior-hero__title">Balance: <span class='credits'>
+        <%= current_user.credits.blank? ? "0" : current_user.credits %> credits</span></h1>
+  <p class="interior-hero__desc">Redeem your credits. Once you've earned enough credits, trade them in for cash!</p>
+</div> <!--/.interior-hero -->
+
+<div class="interior-body">
+  <p class="interior-body__caption">How would you like to cash out?</p>
+</div>
+
   <%= form_for(@cash_out, url:{:controller=>'static_pages', :action=>'new_cash_out'}) do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
   	<%= f.hidden_field :user_id, :value => current_user.id %>
     <%= f.hidden_field :credits, :value => @amount %>
     <%= f.hidden_field :cashout_type %>
     <div class="inner-page__list">
-      <p class="page-title">Cash</p>
-      <ul class="cash-out__list">
-        <li class="paypal-choice">
-        		<img src="/assets/paypal.png">
-            <span class='cash-out__cost'>Cash out with PayPal</span>
-            <i class="fa fa-angle-right cash-choice"></i>
-        </li>
-        <li class="venmo-choice">
-        		<img src="/assets/venmo.png">
-            <span class='cash-out__cost'>Cash out with Venmo</span>
-            <i class="fa fa-angle-right cash-choice"></i>
-        </li>
-      </ul>
+      <div class="paypal-choice">
+      		<img src="/assets/paypal.png">
+          <span class='cash-out__cost'>Cash out with PayPal</span>
+          <i class="fa fa-angle-right cash-choice"></i>
+      </div>
+      <div class="venmo-choice">
+      		<img src="/assets/venmo.png">
+          <span class='cash-out__cost'>Cash out with Venmo</span>
+          <i class="fa fa-angle-right cash-choice"></i>
+      </div>
     </div><!--/.cash-out -->
     <div class="cash-out__wrapper">
 
@@ -49,5 +48,3 @@
 
     </div><!--/.cash-out__wrapper -->
   <% end %>
-
-</div>
