--- a/app/views/static_pages/redeem.html.erb
+++ b/app/views/static_pages/redeem.html.erb
@@ -13,7 +13,7 @@
       <div class="card-tout">
         <div class="card-inner">
           <h1 class="card__big-title">$5</h1>
-          <span class='card__credits'>-1000 credits</span>
+          <span class='card__credits card__lower'>-1000 credits</span>
         </div>
       </div>
     <% end %>
@@ -21,7 +21,7 @@
       <div class="card-tout">
         <div class="card-inner">
           <h1 class="card__big-title">$10</h1>
-          <span class='card__credits'>-1950 credits</span>
+          <span class='card__credits card__lower'>-1950 credits</span>
         </div>
       </div>
     <% end %>
@@ -29,7 +29,7 @@
       <div class="card-tout">
         <div class="card-inner">
           <h1 class="card__big-title">$20</h1>
-          <span class='card__credits'>-3900 credits</span>
+          <span class='card__credits card__lower'>-3900 credits</span>
         </div>
       </div>
     <% end %>
