--- a/app/assets/stylesheets/interior_pages.css.scss
+++ b/app/assets/stylesheets/interior_pages.css.scss
@@ -73,6 +73,44 @@
     background-color: $purple-border;
   }
 }
+.cash-out__submit {
+  background: $purple;
+  border: none;
+  border-radius: 4px;
+  padding: 15px 20px;
+  min-height: 45px;
+  min-width: 140px;
+  color: white;
+  outline: 0;
+  display: none;
+  @include transition();
+
+  &.show {
+    display: inline-block;
+  }
+  &:hover {
+    background-color: $purple-border;
+  }
+}
+.cash-out__redo {
+  display: block !important;
+  font-size: 20px;
+  text-align: center;
+
+  &:hover {
+    cursor: pointer;
+  }
+  &.hide {
+    display: none !important;
+  }
+}
+.cash-out__fields {
+  display: none;
+
+  &.show {
+    display: block;
+  }
+}
 .section--refer {
   .interior-body__caption {
     margin: 0;
