--- a/app/views/static_pages/redeem_credits.html.erb
+++ b/app/views/static_pages/redeem_credits.html.erb
@@ -8,43 +8,92 @@
   <p class="interior-hero__desc">Redeem your credits. Once you've earned enough credits, trade them in for cash!</p>
 </div> <!--/.interior-hero -->
 
-<div class="interior-body">
-  <p class="interior-body__caption">How would you like to cash out?</p>
+<div class='interior-body'>
+  <section class="card-container">
+    <p class="interior-body__caption">How would you like to cash out?</p>
+
+    <div class="paypal-choice card-tout" data-checkout="paypal">
+      <div class="card-inner">
+        <img src="/assets/paypal.png" class="card__payout-img">
+        <p class='cash-out__cost'>Cash out with PayPal</p>
+      </div>
+    </div>
+
+    <div class="venmo-choice card-tout" data-checkout="venmo">
+      <div class="card-inner">
+        <img src="/assets/venmo.png" class="card__payout-img">
+        <p class='cash-out__cost'>Cash out with Venmo</p>
+      </div>
+    </div>
+
+    <i class="fa fa-undo cash-out__redo"></i>
+  </section><!--/.card-container -->
 </div>
+
+
 
   <%= form_for(@cash_out, url:{:controller=>'static_pages', :action=>'new_cash_out'}) do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
   	<%= f.hidden_field :user_id, :value => current_user.id %>
     <%= f.hidden_field :credits, :value => @amount %>
     <%= f.hidden_field :cashout_type %>
-    <div class="inner-page__list">
-      <div class="paypal-choice">
-      		<img src="/assets/paypal.png">
-          <span class='cash-out__cost'>Cash out with PayPal</span>
-          <i class="fa fa-angle-right cash-choice"></i>
-      </div>
-      <div class="venmo-choice">
-      		<img src="/assets/venmo.png">
-          <span class='cash-out__cost'>Cash out with Venmo</span>
-          <i class="fa fa-angle-right cash-choice"></i>
-      </div>
-    </div><!--/.cash-out -->
-    <div class="cash-out__wrapper">
 
-      <div class='paypal-select'>
+    <div class="cash-out__wrapper">
+      <div class='paypal-select cash-out__fields'>
       		<%= text_field_tag "first_name", "First Name", :value => current_user.firstname, placeholder: "First Name" %>
 
       		<%= text_field_tag "last_name","Last Name", :value => current_user.lastname, placeholder: "Last Name" %>
 
       		<%= text_field_tag "email","Email", :value => "", placeholder: "Email" %>
       </div> <!--/.paypal-select -->
-      <div class='venmo-select'>
+
+      <div class='venmo-select cash-out__fields'>
   	    <%= f.text_field "venmo", placeholder: "Venmo username"%>
       </div> <!--/.venmo-select -->
-      <div class='final-step'>
 
-  	    <%= f.submit "Cash out", class: "btn-submit" %>
+      <div class='final-step'>
+  	    <%= f.submit "Cash out", class: "btn-submit cash-out__submit" %>
       </div><!--/.final-step -->
 
     </div><!--/.cash-out__wrapper -->
   <% end %>
+
+  <script>
+    $(document).ready(function(){
+      var $cashoutForm = $('.cash-out__wrapper'),
+          $cashoutRedo = $('.cash-out__redo');
+
+
+      function hideCheckout() {
+        $cashoutForm.slideUp();
+        $cashoutRedo.addClass('hide');
+        $('.cash-out__submit').removeClass('show');
+      }
+
+      function showAllOptions() {
+        $('.venmo-choice, .paypal-choice').fadeIn();
+      }
+
+      $('.venmo-choice, .paypal-choice').click(function(e){
+        $('.cash-out__submit').addClass('show');
+        cashoutType = $(this).attr('data-checkout');
+        $('.' + cashoutType + '-select').addClass('show');
+        $cashoutForm.slideDown();
+        if (cashoutType === "venmo") {
+          $('.paypal-choice').fadeOut();
+          $cashoutRedo.removeClass('hide');
+        } else {
+          $('.venmo-choice').fadeOut();
+          $cashoutRedo.removeClass('hide');
+        }
+      });
+
+      $cashoutRedo.click(function() {
+        hideCheckout();
+        showAllOptions();
+        $('.cash-out__fields').removeClass('show');
+      });
+
+      hideCheckout();
+    });
+  </script>
