--- a/app/assets/stylesheets/cards.css.scss
+++ b/app/assets/stylesheets/cards.css.scss
@@ -18,7 +18,7 @@
   box-shadow: 0px 5px 10px rgba(127, 140, 141,0.5);
   padding: 20px;
   margin: 20px;
-  transition: all .2s ease-in-out;
+  transition: transform .2s ease-in-out;
   outline: 0;
 
   &:hover {
