--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
     <% end %>
   </head>
   <body  <%= "class=#{@body_class}" if @body_class %>>
+    <div class="desktop-wrapper">
     <section class="navigation">
       <div class="nav-left">
         <%= link_to root_path do %><img class="nav-logo" src="/assets/small_luckee_font.png"><% end %>
@@ -51,7 +52,7 @@
       <% end %>
         <%= yield %>
 
-      <%= render 'layouts/footer' %>
+      <%# render 'layouts/footer' %>
 
     </div>
 
@@ -65,23 +66,24 @@
     </script>
 
  <%= yield(:game_javascript) %>
-<% if Rails.env.production? %>
-    <!-- google analytics -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <% if Rails.env.production? %>
+      <!-- google analytics -->
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-58032053-2', 'auto');
-      ga('send', 'pageview');
+        ga('create', 'UA-58032053-2', 'auto');
+        ga('send', 'pageview');
 
-    </script>
-      <script type="text/javascript">
-          rg4js('apiKey', 'K9ewfiwAigDX1AXxc+lC0Q==');
-          rg4js('attach', true);
-          rg4js('enablePulse', true);
-        </script>
-<% end %>
+      </script>
+        <script type="text/javascript">
+            rg4js('apiKey', 'K9ewfiwAigDX1AXxc+lC0Q==');
+            rg4js('attach', true);
+            rg4js('enablePulse', true);
+          </script>
+  <% end %>
+</div><!--/.desktop-wrapper -->
   </body>
 </html>
