--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1314,7 +1314,6 @@ h1.arrow2 { font-size: 55px;
   padding-top:20px;
   padding-bottom:40px;
   .game-image{
-    border-radius:10px;
     width:100%;
     img{
       max-width:300px;
@@ -1329,8 +1328,19 @@ h1.arrow2 { font-size: 55px;
 .game-wrapper {
   position: relative;
   display: inline-block;
-  width: 48%;
-  margin: 20px 0 0;
+  width: 25%;
+  border-radius: 4px;
+  box-shadow: 0px 5px 10px rgba(127, 140, 141,0.5);
+  margin: 20px 10px 0;
+  background-color: $white;
+  padding: 10px;
+  transition: transform .2s ease-in-out;
+
+  &:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+  }
+
 
   &:nth-child(odd) {
   }
