trying to fix js errors

--- a/app/views/games/_fall_down_m.html.erb
+++ b/app/views/games/_fall_down_m.html.erb
@@ -28,36 +28,37 @@
 		
 	</div>
 	
-	<!-- Pages load faster with scripts at the bottom -->
-
-    <script>
-		// Size the canvas to fill the browser viewport.
-		jQuery(window).resize(function() {
-			cr_sizeCanvas(jQuery(window).width(), jQuery(window).height());
-		});
-		
-		// Start the Construct 2 project running on window load.
-		jQuery(document).ready(function ()
-		{			
-			// Create new runtime using the c2canvas
-			cr_createRuntime("c2canvas");
-		});
-		
-		// Pause and resume on page becoming visible/invisible
-		function onVisibilityChanged() {
-			if (document.hidden || document.mozHidden || document.webkitHidden || document.msHidden)
-				cr_setSuspended(true);
-			else
-				cr_setSuspended(false);
-		};
-		
-		document.addEventListener("visibilitychange", onVisibilityChanged, false);
-		document.addEventListener("mozvisibilitychange", onVisibilityChanged, false);
-		document.addEventListener("webkitvisibilitychange", onVisibilityChanged, false);
-		document.addEventListener("msvisibilitychange", onVisibilityChanged, false);
-		
-    </script>
 
  <%= content_for(:game_javascript) do %>
   <%= javascript_include_tag "fall_down", "data-turbolinks-track" => true %>
 <% end %>
+
+<!-- Pages load faster with scripts at the bottom -->
+
+<script>
+	// Size the canvas to fill the browser viewport.
+	jQuery(window).resize(function() {
+		cr_sizeCanvas(jQuery(window).width(), jQuery(window).height());
+	});
+	
+	// Start the Construct 2 project running on window load.
+	$(window).load(function() 
+	{			
+		// Create new runtime using the c2canvas
+		cr_createRuntime("c2canvas");
+	});
+	
+	// Pause and resume on page becoming visible/invisible
+	function onVisibilityChanged() {
+		if (document.hidden || document.mozHidden || document.webkitHidden || document.msHidden)
+			cr_setSuspended(true);
+		else
+			cr_setSuspended(false);
+	};
+	
+	document.addEventListener("visibilitychange", onVisibilityChanged, false);
+	document.addEventListener("mozvisibilitychange", onVisibilityChanged, false);
+	document.addEventListener("webkitvisibilitychange", onVisibilityChanged, false);
+	document.addEventListener("msvisibilitychange", onVisibilityChanged, false);
+	
+</script>
