--- a/app/views/games/_traffic_m.html.erb
+++ b/app/views/games/_traffic_m.html.erb
@@ -25,7 +25,7 @@
 		});
 		
 		// Start the Construct 2 project running on window load.
-		jQuery(document).ready(function ()
+		$(window).load(function()
 		{			
 			// Create new runtime using the c2canvas
 			cr_createRuntime("c2canvas");
