--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
       </div>
       <% if current_user %>
         <div class="nav-right">
-          <!-- <%= link_to 'Games', games_path %> -->
+          <%# link_to 'Games', games_path %>
           <div class="nav-dropdown">
             <p class="nav-dropdown__name"><i class="fa fa-caret-down"></i> <%= current_user.name %></p>
             <% if current_user.oath_image %>
